--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R.C.C.G</title>
     <link href="./css/output.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0a85dbbf01.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet">
 </head>
 
@@ -30,52 +31,61 @@
             </nav>
         </div>
     </header>
-    <!-- <main class="">
-        <swiper-container loop="true">
-            <swiper-slide class="min-h-screen flex justify-center items-center text-center bg-black bg-opacity-40">
-                <div class="">
-                    <h1 class="md:text-6xl font-medium">We Welcome You</h1>
-                    <p class="md:text-4xl">to Higher Ground Assemble</p>
-                </div>
-            </swiper-slide>
-            <swiper-slide class="min-h-screen flex justify-center items-center text-center bg-black bg-opacity-40">
-                <div class="">
-                    <h1 class="md:text-6xl font-medium">We Welcome You</h1>
-                    <p class="md:text-4xl">to Higher Ground Assemble</p>
-                </div>
-            </swiper-slide>
-            <swiper-slide class="min-h-screen flex justify-center items-center text-center bg-black bg-opacity-40">
-                <div class="">
-                    <h1 class="md:text-6xl font-medium">Loving God. Loving People</h1>
-                    <p class="md:text-4xl">Serving as His Church</p>
-                </div>
-            </swiper-slide>
-            <swiper-slide class="min-h-screen flex justify-center items-center text-center bg-black bg-opacity-40">
-                <div class="">
-                    <h1 class="md:text-6xl font-medium">Ours is a growing Church</h1>
-                    <p class="md:text-4xl">Made of friendly, caring and happy people</p>
-                </div>
-            </swiper-slide>
-            <swiper-slide class="min-h-screen flex justify-center items-center text-center bg-black bg-opacity-40">
-                <div class="">
-                    <h1 class="md:text-6xl font-medium">Pressing Forward</h1>
-                    <p class="md:text-4xl">Making Potentials Real</p>
-                </div>
-            </swiper-slide>
-        </swiper-container>
-    </main> -->
     <section class="splide" aria-label="Splide Basic HTML Example">
-        <div class="splide__track">
-            <ul class="splide__list">
-                <li class="splide__slide">Slide 01</li>
-                <li class="splide__slide">Slide 02</li>
-                <li class="splide__slide">Slide 03</li>
+        <div class="relative splide__track">
+            <ul class="landing splide__list min-h-screen flex text-center cursor-grab">
+                <li class="text-white splide__slide flex justify-center items-center bg-[url(../images/slide1.jpg)] bg-cover bg-bottom">
+                    <div class="">
+                        <h1 class="md:text-6xl tracking-wider">We Welcome You</h1>
+                        <p class="md:text-4xl">to Higher Ground Assemble</p>
+                    </div>
+                </li>
+                <li class="text-white splide__slide flex justify-center items-center bg-[url(../images/slide2.jpg)] bg-cover bg-bottom">
+                    <div class="">
+                        <h1 class="md:text-6xl tracking-wider">Loving God. Loving People</h1>
+                        <p class="md:text-4xl">Serving as His Church</p>
+                    </div>
+                </li>
+                <li class="text-white splide__slide flex justify-center items-center bg-[url(../images/slide3.jpg)] bg-cover bg-bottom">
+                    <div class="">
+                        <h1 class="md:text-6xl tracking-wider">Ours is a growing Church</h1>
+                        <p class="md:text-4xl">Made of friendly, caring and happy people</p>
+                    </div>
+                </li>
+                <li class="text-white splide__slide flex justify-center items-center bg-[url(../images/slide2.jpg)] bg-cover bg-bottom">
+                    <div class="">
+                        <h1 class="md:text-6xl tracking-wider">Pressing Forward</h1>
+                        <p class="md:text-4xl">Making Potentials Real</p>
+                    </div>
+                </li>
             </ul>
+            <div class="absolute inset-0 w-full splide__arrows">
+                <button class="absolute left-0 top-1/2 -translate-y-1/2 splide__arrow--prev text-3xl text-white">
+                    <i class="fa-solid fa-chevron-left"></i>
+                </button>
+                <button class="absolute right-0 top-1/2 -translate-y-1/2 splide__arrow--next text-3xl text-white">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </button>
+            </div>
         </div>
-    </section>#
-    
+    </section>
 
 
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+
+            let splide = new Splide('.splide', {
+                type: "loop",
+                perPage: 1,
+                interval: 4000,
+                speed: 700,
+                autoplay: true,
+                pagination: false,
+            });
+            splide.mount();
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 </body>
