--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <section class="splide" aria-label="Splide Basic HTML Example">
         <div class="relative splide__track">
-            <ul class="landing splide__list min-h-screen flex text-center cursor-grab">
+            <ul class="landing splide__list min-h-screen flex text-center cursor- overflow-hidden">
                 <li
                     class="text-white splide__slide flex justify-center items-center bg-[url(../images/slide1.jpg)] bg-cover bg-bottom">
                     <div class="text-content">
