--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 </head>
 
 <body>
-    <header
-        class="z-10 absolute top-0 right-0 left-0 w-full flex items-center justify-between md:px-14 md:py-4 bg-blue-500 bg-opacity-30">
-        <div>
-            <h1 class="font-bold md:text-lg text-white">
-                HIGHER GROUND <span class="text-blue-600">ASSEMBLY</span>
-            </h1>
-            <p class="text-xs italic text-[#515b6b]">
-                Pressing Forward... Making Potentials Real
-            </p>
+    <header class="z-10 absolute top-0 right-0 left-0 w-full flex items-center justify-around py-2 md:px-14 md:py-4 bg-blue-500 bg-opacity-30">
+        <div class=" flex-1 md:flex-auto md:block flex justify-center">
+            <div>
+                <h1 class="font-bold md:text-lg text-white">
+                    HIGHER GROUND <span class="text-blue-600">ASSEMBLY</span>
+                </h1>
+                <p class="text-xs italic text-[#515b6b]">
+                    Pressing Forward... Making Potentials Real
+                </p>
+            </div>
         </div>
-        <div>
+        <div class="md:block hidden">
             <nav>
                 <ul class="flex items-center gap-5 text-sm font-medium text-white">
                     <li>ABOUT</li>
@@ -37,7 +38,7 @@
     </header>
     <section class="splide" aria-label="Splide Basic HTML Example">
         <div class="relative splide__track">
-            <ul class="landing splide__list min-h-screen flex text-center cursor- overflow-hidden">
+            <ul class="landing splide__list min-h-screen flex text-center cursor-grab">
                 <li
                     class="text-white splide__slide flex justify-center items-center bg-[url(../images/slide1.jpg)] bg-cover bg-bottom">
                     <div class="text-content">
@@ -84,6 +85,10 @@
         </div>
     </section>
 
+    <section class="min-h-screen flex justify-center items-center">
+        <h1>what happen</h1>
+    </section>
+
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             let splide = new Splide(".splide", {
@@ -111,13 +116,12 @@
                 if (textContent) {
                     textContent.classList.add("fade-in-up");
                 }
-                activeSlide.classList.add('zoom-in');
+                // activeSlide.classList.add('zoom-in');
             });
             splide.mount();
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 </body>
 
 </html>
