--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
     </section>
 
-    <section class="md:py-10 px-4 md:px-10 py-4">
+    <section class="md:py-20 px-4 md:px-10 py-4">
         <div class="bg-[#424242] grid lg:grid-cols-4 text-center p-16">
             <div class="text-[#b3b3b3]">
                 <div class="hover:text-[#f9f9f9] hover:border-[#f9f9f9] duration-300 border-2 border-[#b3b3b3] rounded-full w-24 aspect-square text-4xl flex justify-center items-center mx-auto">
@@ -136,6 +136,14 @@
             </div>
         </div>
     </section>
+
+    <section class="md:px-10 md:py-20 w-full">
+        <iframe class="w-full" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126836.0244049515!2d3.25579930615109!3d6.568828161515776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b923a3a316fe7%3A0xa45c0bf28f2f97cf!2sTHE%20REDEEMED%20CHRISTIAN%20CHURCH%20OF%20GOD%20HIGHER%20GROUND!5e0!3m2!1sen!2sng!4v1721373360853!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+
+    <footer>
+
+    </footer>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
