--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>R.C.C.G</title>
+    <title>RCCG Higher Ground Assembly - Pressing Forward, Making Potentials Real</title>
     <link href="./css/output.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/0a85dbbf01.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet" />
@@ -15,7 +15,7 @@
         <div class=" flex-1 md:flex-auto md:block flex justify-center">
             <div class="flex items-center gap-3">
                 <div>
-                    <img src="./images/logo.png" class="w-10 object-cover aspect-square rounded-full" alt="">
+                    <img src="./images/logo.png" loading="lazy" class="w-10 object-cover aspect-square rounded-full" alt="">
                 </div>
                 <div class="flex-1">
                     <h1 class="font-bold md:text-lg text-white">
@@ -92,7 +92,7 @@
 
     <section class="flex md:flex-row flex-col gap-10 md:py-32 px-4 md:px-20 py-4">
         <div class="flex-1">
-            <img src="./images/slide3.jpg" class="w-full h-[400px] object-cover object-bottom" alt="">
+            <img src="./images/slide3.jpg" loading="lazy" class="w-full h-[400px] object-cover object-bottom" alt="">
         </div>
         <div class="flex-1 flex flex-col justify-between h-[700px] bg-[#424242] p-6">
             <div>
@@ -141,8 +141,21 @@
         <iframe class="w-full" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126836.0244049515!2d3.25579930615109!3d6.568828161515776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b923a3a316fe7%3A0xa45c0bf28f2f97cf!2sTHE%20REDEEMED%20CHRISTIAN%20CHURCH%20OF%20GOD%20HIGHER%20GROUND!5e0!3m2!1sen!2sng!4v1721373360853!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
-    <footer>
-
+    <footer class="bg-[#00091f] md:py-6">
+        <div class="flex flex-col gap-2 text-center text-[#b3adad] text-[13px]">
+            <p>Copyright 2024 RCCG Higher Ground Assembly. Baltimore, MD. All rights reserved.</p>
+            <div class="flex justify-center items-center gap-2">
+                <div class="text-lg w-10 aspect-square rounded-full bg-white text-[#0a84b7] flex justify-center items-center">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </div>
+                <div class="text-lg w-10 aspect-square rounded-full bg-white text-[#0a84b7] flex justify-center items-center">
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+                <div class="text-lg w-10 aspect-square rounded-full bg-white text-[#0a84b7] flex justify-center items-center">
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script>
