--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <header class="z-10 absolute top-0 right-0 left-0 w-full flex items-center justify-around py-2 px-4 md:px-16 md:py-4 bg-blue-500 bg-opacity-30">
-        <div class=" flex-1 md:flex-auto md:block flex justify-center">
+    <header class="z-10 absolute top-0 right-0 left-0 w-full flex items-center justify-around py-2 px-4 md:px-16 md:py-4 bg-blue-500 bg-opacity-20">
+        <div class="md:block flex justify-center">
             <div class="flex items-center gap-3">
                 <div>
                     <img src="./images/logo.png" loading="lazy" class="w-10 object-cover aspect-square rounded-full" alt="">
@@ -29,21 +29,27 @@
         </div>
         <div class="md:block hidden">
             <nav>
-                <ul class="flex items-center gap-5 text-sm font-normal text-white">
-                    <li>ABOUT</li>
-                    <li>SERVICES</li>
-                    <li>MINISTRIES</li>
-                    <li>DEPARTMENTS</li>
-                    <li>MEDIA</li>
-                    <li>RESOURSES</li>
-                    <li>CONTACT</li>
+                <ul class="flex items-center gap-8 text-sm font-normal text-white">
+                    <li><p>ABOUT</p></li>
+                    <li><p>SERVICES</p></li>
+                    <li><p>MINISTRIES</p></li>
+                    <li><p>DEPARTMENTS</p></li>
+                    <li class="flex items-start gap-2">
+                        <p>MEDIA</p>
+                        <i class="fa-solid fa-sort-down"></i>
+                    </li>
+                    <li class="flex items-start gap-2">
+                        <p>RESOURSES</p>
+                        <i class="fa-solid fa-sort-down"></i>
+                    </li>
+                    <li><p>CONTACT</p></li>
                 </ul>
             </nav>
         </div>
     </header>
     <section class="splide" aria-label="Landing Slider">
         <div class="relative splide__track">
-            <ul class="landing splide__list min-h-screen flex text-center cursor-grab">
+            <ul class="landing splide__list md:min-h-screen min-h-[200px] flex text-center cursor-grab">
                 <li
                     class="text-white splide__slide flex justify-center items-center bg-[url(../images/slide1.jpg)] bg-cover bg-bottom">
                     <div class="text-content">
@@ -90,60 +96,60 @@
         </div>
     </section>
 
-    <section class="flex md:flex-row flex-col gap-10 md:py-32 px-4 md:px-20 py-4">
+    <section class="flex md:flex-row flex-col gap-10 md:py-32 px-2 md:px-20 py-2">
         <div class="flex-1">
             <img src="./images/slide3.jpg" loading="lazy" class="w-full h-[400px] object-cover object-bottom" alt="">
         </div>
-        <div class="flex-1 flex flex-col justify-between h-[700px] bg-[#424242] p-6">
+        <div class="flex-1 flex flex-col items-center md:items-start justify-between h-[700px] bg-[#424242] px-8 py-6 md:text-left text-center">
             <div>
-                <h1 class="font-bold md:text-3xl text-white">Welcome to Higher Ground Assembly</h1>
-                <p class="md:text-[22px] leading-[45px] text-sm font-light text-[#c3c3c3]">Permit me to welcome you to this entrance to information about Higher Ground Assembly, a parish of the Redeemed Christian Church of God worldwide. Ours is a growing Church made of friendly, caring and happy people. We are determined to keep pressing until your God-given potential turns to reality</p>
+                <h1 class="font-medium text-2xl md:text-3xl text-white fjalla">Welcome to Higher Ground Assembly</h1>
+                <p class="text-[24px] leading-[45px] font-light text-[#c3c3c3]">Permit me to welcome you to this entrance to information about Higher Ground Assembly, a parish of the Redeemed Christian Church of God worldwide. Ours is a growing Church made of friendly, caring and happy people. We are determined to keep pressing until your God-given potential turns to reality</p>
             </div>
-            <p class="redressed font-light md:text-3xl text-[#e0e0e0]">- Pastor Olulana</p>
+            <p class="redressed font-light text-3xl text-[#e0e0e0]">- Pastor Olulana</p>
         </div>
     </section>
 
-    <section class="md:py-20 px-4 md:px-10 py-4">
-        <div class="bg-[#424242] grid lg:grid-cols-4 text-center p-16">
+    <section class="md:py-20 px-2 md:px-10 py-2">
+        <div class="bg-[#424242] grid gap-20 lg:grid-cols-4 md:grid-cols-2 grid-cols-1 text-center p-16">
             <div class="text-[#b3b3b3]">
                 <div class="hover:text-[#f9f9f9] hover:border-[#f9f9f9] duration-300 border-2 border-[#b3b3b3] rounded-full w-24 aspect-square text-4xl flex justify-center items-center mx-auto">
                     <i class="fa-brands fa-envira"></i>
                 </div>
-                <h2 class="md:text-3xl my-2 font-medium">Sunday Services</h2>
-                <p>Sunday School: 9:30am</p>
-                <p>Worship Service: 10:00am - 12:00pm</p>
+                <h2 class="text-3xl my-2 font-medium">Sunday Services</h2>
+                <p class="text-base">Sunday School: 9:30am</p>
+                <p class="text-base">Worship Service: 10:00am - 12:00pm</p>
             </div>
             <div class="text-[#58bbd5]">
                 <div class="hover:text-[#b1dde9] hover:border-[#b1dde9] duration-300 border-2 border-[#58bbd5] rounded-full w-24 aspect-square text-4xl flex justify-center items-center mx-auto">
                     <i class="fa-solid fa-handshake"></i>
                 </div>
-                <h2 class="md:text-3xl my-2 font-medium">Thanksgiving Service</h2>
-                <p>Every First Sunday of the Month: 10:00am - 12:30pm</p>
+                <h2 class="text-3xl my-2 font-medium">Thanksgiving Service</h2>
+                <p class="text-base">Every First Sunday of the Month: 10:00am - 12:30pm</p>
             </div>
             <div class="text-[#f4c61f]">
                 <div class="hover:text-[#efdea3] hover:border-[#efdea3] border-2 border-[#f4c61f] rounded-full w-24 aspect-square text-4xl flex justify-center items-center mx-auto">
                     <i class="fa-solid fa-book"></i>
                 </div>
-                <h2 class="md:text-3xl my-2 font-medium">Bible Study</h2>
-                <p>Wednesdays: 7:00pm</p>
+                <h2 class="text-3xl my-2 font-medium">Bible Study</h2>
+                <p class="text-base">Wednesdays: 7:00pm</p>
             </div>
             <div class="text-[#2eb161]">
                 <div class="hover:text-[#b5c6bb] hover:border-[#b5c6bb] border-2 border-[#2eb161] rounded-full w-24 aspect-square text-4xl flex justify-center items-center mx-auto">
                     <i class="fa-solid fa-fire-flame-curved"></i>
                 </div>
-                <h2 class="md:text-3xl my-2 font-medium">Solutions Night</h2>
-                <p>Every Second Friday of the Month: 8:00pm - 12:00am</p>
+                <h2 class="text-3xl my-2 font-medium">Solutions Night</h2>
+                <p class="text-base">Every Second Friday of the Month: 8:00pm - 12:00am</p>
             </div>
         </div>
     </section>
 
-    <section class="md:px-10 md:py-20 w-full">
+    <section class="md:px-10 md:py-20 px-2 py-4 w-full">
         <iframe class="w-full" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126836.0244049515!2d3.25579930615109!3d6.568828161515776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b923a3a316fe7%3A0xa45c0bf28f2f97cf!2sTHE%20REDEEMED%20CHRISTIAN%20CHURCH%20OF%20GOD%20HIGHER%20GROUND!5e0!3m2!1sen!2sng!4v1721373360853!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
-    <footer class="bg-[#00091f] md:py-6">
-        <div class="flex flex-col gap-2 text-center text-[#b3adad] text-[13px]">
-            <p>Copyright 2024 RCCG Higher Ground Assembly. Baltimore, MD. All rights reserved.</p>
+    <footer class="bg-[#00091f] py-6 px-10">
+        <div class="flex flex-col gap-2 text-center text-[#b3adad]">
+            <p class="text-[13px] leading-[13px]">Copyright 2024 RCCG Higher Ground Assembly. Baltimore, MD. All rights reserved.</p>
             <div class="flex justify-center items-center gap-2">
                 <div class="text-lg w-10 aspect-square rounded-full bg-white text-[#0a84b7] flex justify-center items-center">
                     <i class="fa-brands fa-facebook-f"></i>
