--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <div class="md:block hidden">
             <nav>
                 <ul class="flex items-center text-sm font-normal text-white">
-                    <li class="p-3 cursor-pointer"><p>ABOUT</p></li>
+                    <a href="./about.html" class="p-3 block">
+                        <li class="cursor-pointer"><p>ABOUT</p></li>
+                    </a>
                     <li class="p-3 cursor-pointer"><p>SERVICES</p></li>
                     <li class="p-3 cursor-pointer"><p>MINISTRIES</p></li>
                     <li class="p-3 cursor-pointer"><p>DEPARTMENTS</p></li>
