--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
         </div>
     </section>
 
-    <section class="bg-black text-white flex mf:flex-row flex-col md:py-16 py-10 px-4 md:px-10">
+    <section class="bg-black text-white flex md:flex-row flex-col md:py-40 py-10 px-4 md:px-10">
         <div>
             <h1 class="anton text-white text-[84px] leading-[92px]">WHAT WILL YOU GET</h1>
         </div>
@@ -155,7 +155,7 @@
     </section>
 
     <section class="bg-[#141655] md:py-20 ">
-        <div class="flex md:flex-row flex-col items-center justify-around text-white">
+        <div class="flex md:flex-row flex-col items-center justify-around text-white text-xl">
             <div>
                 8 speakers
             </div>
