--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
         </div>
     </section>
 
-    <section class="bg-[url(../images/slide3.jpg)] bg-cover bg-bottom">
+    <section class="bg-[url(../images/slide3.jpg)] bg-cover bg-bottom flex justify-center">
         <div class="md:w-[80%] h-[300px] bg-black flex justify-center items-center">
             Video
         </div>
