--- a/about.html
+++ b/about.html
@@ -169,8 +169,8 @@
     </section>
 
     <section class="bg-[url(../images/slide3.jpg)] bg-cover bg-bottom flex justify-center">
-        <div class="md:w-[80%] h-[300px] bg-black flex justify-center items-center">
-            Video
+        <div class="md:w-[80%] h-[300px] bg-black flex justify-center items-center text-white">
+            Video goes here
         </div>
     </section>
     <div class="bg-black w-full h-32"></div>
